test/tests/compiler/18_structures/invalid_parse/extra_credit/union_two_tags.plx
# Union tag must be a single identifier

type union x y (a: i32)
